Fixed button color on mobile

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body {
   font-weight: 600;
   height: 4rem;
   outline: none;
+  color: black;
 }
 
 #zero {
